2009-01-19  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 3.99.10

Released 3.99.9

2009-01-19  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/sqlite-src: reverted to 3.6.7 because of bug #568093
	* other files: documentation updates

2009-01-18  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/gda-sqlite-provider.c: fix for bug #568165
	* libgda-report/RML/gda-report-rml-document.c:
	* providers/skel-implementation/models/gda-models.h:
	* providers/skel-implementation/capi/gda-capi.h:
	* libgda/sqlite/virtual/gda-virtual-provider.c:
	* libgda/sqlite/virtual/gda-vprovider-data-model.c:
	* libgda/sqlite/virtual/gda-vprovider-hub.c: applied patch
	for bug #568163 (thanks to Halton Huo)

2009-01-15  Vivien Malerba <malerba@gnome-db.org>

	* libgda/Makefile.am:
	* libgda/gda-threader.[ch]:
	* libgda/libgda.symbols:
	* tools/Makefile.am:
	* tools/gda-threader.[ch]: removed GdaThreader from Libgda and moved it
	to the gda-sql console which uses it, as this API is not well thought enough
	(fixes bug #561175)
	* libgda/gda-data-model.h: typedef enum GdaDataModelError
	* libgda/gda-data-proxy.c: removed unused gda_data_proxy_get_model(), and
	made gda_data_proxy_append() static
	* libgda/gda-server-operation.c: improved documentation, for bug #561178
	* Makefile.am: also distribute getsp.java and getsp.class
	* libgda-report/Makefile.am: also distribute libgda-report.symbols
	* doc/C:
	  - fix for bug #561173
	  - updated documentation
	  - cleanups
	* libgda/sqlite/sqlite-src: now uses SQLite 3.6.10
	* libgda/gda-value.c: made gda_value_list_copy() and gda_value_list_free() static
	* libgda/gda-data-model.c:
	* libgda/gda-data-model-private.h: made gda_data_model_to_xml_node() static

2009-01-12  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 3.99.9

Released 3.99.8

2009-01-12  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sql-parser/gda-statement-struct-parts.c:
	* doc/C: doc. improvements