@@ -222,7 +222,7 @@ _gda_sqlite_meta__btypes (GdaServerProvider *prov, GdaConnection *cnc,
 		{"integer", "gint", "Signed integer, stored in 1, 2, 3, 4, 6, or 8 bytes depending on the magnitude of the value", "int"},
 		{"real", "gdouble",  "Floating point value, stored as an 8-byte IEEE floating point number", NULL},
 		{"text", "string", "Text string, stored using the database encoding", "string"},
-		{"blob", "GdaBinary", "Blob of data, stored exactly as it was input", NULL},
+		{"blob", "GdaBlob", "Blob of data, stored exactly as it was input", NULL},
 		{"timestamp", "GdaTimestamp", "Time stamp, stored as 'YYYY-MM-DD HH:MM:SS.SSS'", NULL},
 		{"time", "GdaTime", "Time, stored as 'HH:MM:SS.SSS'", NULL},
 		{"date", "GDate", "Date, stored as 'YYYY-MM-DD'", NULL},
